--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,13 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 100px;
+  font: 32px "Century Gothic", Futura, sans-serif;
+  margin: 200px;
   margin-left: 500px;
   margin-right: 500px;
   background-color: lightgrey;
+}
+
+button {
+  font: 32px "Century Gothic", Futura, sans-serif;
 }
 
 .view-switch-container {
