--- a/public/index.css
+++ b/public/index.css
@@ -10,7 +10,7 @@ button, select {
   font: 32px "Century Gothic", Futura, sans-serif;
 }
 
-.view-switch-container {
+.view-switch-container, .class-level-container {
   display: flex;
   justify-content: space-between;
 }
